--- a/src/host/CMakeLists.txt
+++ b/src/host/CMakeLists.txt
@@ -10,11 +10,11 @@ add_library("${LIBRARY_NAME}" "${LIBRARY_SOURCES}" "${LIBRARY_HEADERS}")
 target_include_directories("${LIBRARY_NAME}" PUBLIC "${LIBRARY_INCLUDES}")
 target_link_libraries("${LIBRARY_NAME}"
     PRIVATE
-        # juce::juce_audio_utils
+        juce::juce_audio_utils
     PUBLIC
-        # juce::juce_recommended_config_flags
-        # juce::juce_recommended_lto_flags
-        # juce::juce_recommended_warning_flags
+        juce::juce_recommended_config_flags
+        juce::juce_recommended_lto_flags
+        juce::juce_recommended_warning_flags
         "AudioBuffer"
         "protobufGenerated"
 )
