--- a/src/tcpHost/CMakeLists.txt
+++ b/src/tcpHost/CMakeLists.txt
@@ -11,12 +11,12 @@ target_include_directories("${LIBRARY_NAME}" PUBLIC "${LIBRARY_INCLUDES}")
 message(STATUS "Protobuf_INCLUDE_DIRS: ${Protobuf_INCLUDE_DIRS}")
 target_link_libraries("${LIBRARY_NAME}"
     PRIVATE
-        # juce::juce_audio_utils
+        juce::juce_audio_utils
 
     PUBLIC
-        # juce::juce_recommended_config_flags
-        # juce::juce_recommended_lto_flags
-        # juce::juce_recommended_warning_flags
+        juce::juce_recommended_config_flags
+        juce::juce_recommended_lto_flags
+        juce::juce_recommended_warning_flags
         "AudioBuffer"
         "Host"
         "protobufGenerated"
