fix(tests): restructured tests and edited cmakelists files to make test build and run correctly

--- a/tests/helpers/CMakeLists.txt
+++ b/tests/helpers/CMakeLists.txt
@@ -16,6 +16,6 @@ target_link_libraries("${LIBRARY_NAME}"
         juce::juce_recommended_lto_flags
         juce::juce_recommended_warning_flags
         PRIVATE
-        juce::juce_audio_utils
+        juce_audio_basics
 
 )
