feat(processor & cmt): test are currently broken! passing reference of processor to cmt to send data from cmt to editor

--- a/tests/helpers/CMakeLists.txt
+++ b/tests/helpers/CMakeLists.txt
@@ -10,12 +10,15 @@ set(LIBRARY_INCLUDES "./" "${CMAKE_BINARY_DIR}/configured_files/include")
 add_library("${LIBRARY_NAME}" "${LIBRARY_SOURCES}" "${LIBRARY_HEADERS}")
 target_include_directories("${LIBRARY_NAME}" PUBLIC "${LIBRARY_INCLUDES}" "${GENERATED_PROTO_DIR}")
 target_link_libraries("${LIBRARY_NAME}"
+    PRIVATE
+        juce_audio_basics
+
     PUBLIC
+        "ConnectDAWs"
         "protobufGenerated"
         juce::juce_recommended_config_flags
         juce::juce_recommended_lto_flags
         juce::juce_recommended_warning_flags
-        PRIVATE
-        juce_audio_basics
+
 
 )
