feat(connectDAWs, CMT, provider and consumer): big structural and functional changes (too many) (#3)
* feat(tcp host & protobuf): created tcp host for save communication of configuration data of provider and consumer threads. Added protobuf making future changes to what needs to be send easier

* feat(connection manager thread): switched to tcp host. still need to test provider and consumer in connection manager thread

* feat(provider & consumer thread): simplefied and testes functionality. Provider sends directly without any validation, consumer receives directly

* feat(cmt): implemented rough version of what the connectionManager is sopose to do, validated it with small test

* feat(cmt, editor & processor): raw bone of communication of edito to cmt through processor, with the help of MessageListener

* trying to find a braking cmake change

* savetfy commit before making structural changes

* ref(folder structure): changed to flat, and fixed vst3 build error by setting vst3_auto_manifest to false

* fix(tests): restructured tests and edited cmakelists files to make test build and run correctly

* feat(processor & cmt): test are currently broken! passing reference of processor to cmt to send data from cmt to editor

* feat(connectDAWs): exracting plugin logic from framework class

* feat(connectDAWs & Messenger): fixed tests, created one directional Messenger based on juce::MessageListener for communication between gui and cmt

* ref(includes & naming): removed some unneccessary includes and changed Host to UdpHost

* feat(messeges): added minimal status updates from connectDAWs to editor for minimal visual feedback

* ref(connectDAWs): removed commented code

* feat(connectDAWs): started to implement the processBlock function, currently not working correclty

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,59 +1,73 @@
 cmake_minimum_required(VERSION 3.22)
 message(STATUS "Starting CMake configuration")
 
-project(CapstoneProject VERSION 0.1.0 LANGUAGES C CXX)
+project(PlaceHolderNAME VERSION 0.1.0 LANGUAGES C CXX)
 
 
 set(CMAKE_CXX_STANDARD 23)
+
 if (APPLE)
     # On Mac, we need to wait for a new JUCE version that fixes the compilation issue
     set(CMAKE_CXX_STANDARD 20)
 endif()
+
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+
 
 option(ENABLE_TESTING "Enable building tests" ON)
 
 option(ENABLE_WARNINGS "Enable compiler warnings" ON)
+
 option(ENABLE_WARNINGS_AS_ERRORS "Enable compiler warnings as errors" OFF)
 
 option(ENABLE_SANITIZERS "Enable sanitizers" ON)
 
-option(ENABLE_LTO "Enable LTO/IPO" ON)
-
+option(ENABLE_LTO "Enable LTO/IPO" OFF)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+set(BUILD_SHARED_LIBS OFF)
 
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
 message(STATUS "Installing with VCPKG")
-include(    ${CMAKE_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake)
+# Set vcpkg target triplet for static libraries
+set(VCPKG_TARGET_TRIPLET "x64-windows-static" CACHE STRING "Vcpkg target triplet")
+
+include(${CMAKE_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake)
+
+# Set vcpkg target triplet for static libraries
+
 find_package(juce 7.0.12 REQUIRED)
+
 find_package(Boost 1.83.0 REQUIRED COMPONENTS system coroutine context)
 
-include_directories(${Boost_INCLUDE_DIRS})
-
-
+find_package(Protobuf REQUIRED)
 
 
 add_subdirectory(src)
-add_subdirectory(plugin)
+
 
 if (ENABLE_TESTING)
+    message(STATUS "Testing enabled")
     find_package(catch2 3.5.4 REQUIRED)
     list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
+
     include(CTest)
     include(Catch)
-
     enable_testing()
-    add_subdirectory(test)
+
+    add_subdirectory(tests)
 endif()
 
 if (ENABLE_SANITIZERS)
+    message(STATUS "Sanitizers enabled")
     include(Sanitizer)
     add_sanitizer_flags()
 endif()
 
 if (ENABLE_LTO)
+    message(STATUS "LTO enabled")
     include(LTO)
 endif()
 
