--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_subdirectory(audioBuffer)
-add_subdirectory(host)
-add_subdirectory(provider)
-add_subdirectory(consumer)
-add_subdirectory(connectionManager)
+if(Protobuf_FOUND)
+    add_subdirectory(protobufMessages)
+endif()
+
+add_subdirectory(plugin)
