ref(logger): moved logger to utility, not quite sure how to structure the utility folder & tried to implement getting the public ip address via external website

--- a/tests/unitTests/CMakeLists.txt
+++ b/tests/unitTests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(TESTS_SOURCES
     test_ConsumerThread.cpp
     test_ConnectionManagerThread.cpp
     test_TcpHost.cpp
+    test_ConnectDAWs.cpp
 )
 
 add_executable(${TEST_NAME} ${TESTS_SOURCES})
