--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,16 +2,16 @@ name: CMake
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "trunk" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "trunk" ]
 
 jobs:
   build:
     strategy:
       matrix:
         os: [macos-latest, windows-latest]
-        build_type: [Debug, Release]
+        build_type: [Debug]
 
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
@@ -35,11 +35,11 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{ matrix.build_type }}
+      run: cmake --build ${{github.workspace}}/build --config ${{ matrix.build_type }} --target ALL_BUILD
 
     - name: Test
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{ matrix.build_type }}
+      run: ctest -T test --test-dir build/ -C ${{ matrix.build_type }} --output-on-failure
 
