--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [macos-latest, windows-latest]
+        os: [windows-latest]
         build_type: [Debug]
 
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
