--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -43,7 +43,7 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config ${{ matrix.build_type }} --target ALL_BUILD
 
     - name: Test
-      working-directory: ${{github.workspace}}/build
+      working-directory: ${{github.workspace}}
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -T test --test-dir build/ -C ${{ matrix.build_type }} --output-on-failure
