fix(github actions): cmake workflow, added cache for vcpkg installed libs

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -26,12 +26,18 @@ jobs:
         submodules: recursive
 
 
-    - name: Cache dependencies
-      id: cache-libs
+    - name: Cache vcpkg
+      id: cache-vcpkg
       uses: actions/cache@v4
       with:
-        path: ${{github.workspace}}
-        key: libs
+        path: |
+            vcpkg_installed
+            vcpkg/packages
+            vcpkg/downloads
+            vcpgk/buildtrees
+        key: ${{ runner.os }}-vcpkg-${{ hashFiles('vcpkg.json') }}
+        restore-keys: |
+            ${{ runner.os }}-vcpkg-
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
