--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,9 +2,9 @@ name: CMake
 
 on:
   push:
-    branches: [ "trunk" ]
+    branches: [  ]
   pull_request:
-    branches: [ "trunk" ]
+    branches: [  ]
 
 jobs:
   build:
