ref(hosts): fixed possible loss of data warnings and enabled warnings as errors for ConnectDAWs target

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -89,7 +89,7 @@ target_compile_definitions(${PROJECT_NAME}
         JUCE_VST3_CAN_REPLACE_VST2=0
 )
 
-target_set_warnings(${PROJECT_NAME} ENABLE ALL AS_ERROR ALL)
+target_set_warnings(TARGET ${PROJECT_NAME} ENABLE ON AS_ERROR ON)
 
 
 if (MSVC)
