--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,9 +2,9 @@ name: CMake
 
 on:
   push:
-    branches: [  ]
+    branches: [ trunk ]
   pull_request:
-    branches: [  ]
+    branches: [ trunk ]
 
 jobs:
   build:
@@ -25,6 +25,15 @@ jobs:
         fetch-depth: 0
         submodules: recursive
 
+    - name: Export GitHub Actions cache environment variables
+      uses: actions/github-script@v7
+      with:
+        script: |
+          core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
+          core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
+      env:
+        VCPKG_BINARY_SOURCES: "clear;x-gha,readwrite"
+
 
     - name: Cache vcpkg
       id: cache-vcpkg
@@ -36,8 +45,6 @@ jobs:
             vcpkg/downloads
             vcpgk/buildtrees
         key: ${{ runner.os }}-vcpkg-${{ hashFiles('vcpkg.json') }}
-        restore-keys: |
-            ${{ runner.os }}-vcpkg-
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
