--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -40,6 +40,7 @@ jobs:
       uses: actions/cache@v4
       with:
         path: |
+            build/vcpkg_installed
             external/vcpkg/packages
             external/vcpkg/downloads
             external/vcpgk/buildtrees
