--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -46,6 +46,14 @@ jobs:
             external/vcpgk/buildtrees
         key: ${{ runner.os }}-vcpkg-${{ hashFiles('vcpkg.json') }}
 
+    - name: Cache build
+      id: cache-build
+      uses: actions/cache@v4
+      with:
+        path: |
+            build
+        key: ${{ runner.os }}-build
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
