ref(tests): renamed test_AudioBuffer to test_RingBuffer

--- a/tests/unitTests/CMakeLists.txt
+++ b/tests/unitTests/CMakeLists.txt
@@ -3,7 +3,7 @@ message("Building Unit tests")
 set(TEST_NAME "ConnectDAWsUnitTests")
 
 set(TESTS_SOURCES
-    test_AudioBuffer.cpp
+    test_RingBuffer.cpp
     test_UdpHost.cpp
     test_ProviderThread.cpp
     test_ConsumerThread.cpp
