--- a/tests/unitTests/CMakeLists.txt
+++ b/tests/unitTests/CMakeLists.txt
@@ -3,13 +3,13 @@ message("Building Unit tests")
 set(TEST_NAME "ConnectDAWsUnitTests")
 
 set(TESTS_SOURCES
-    # test_RingBuffer.cpp
+    test_RingBuffer.cpp
     test_UdpHost.cpp
-    # test_ProviderThread.cpp
-    # test_ConsumerThread.cpp
-    # test_ConnectionManagerThread.cpp
-    # test_TcpHost.cpp
-    # test_ConnectDAWs.cpp
+    test_ProviderThread.cpp
+    test_ConsumerThread.cpp
+    test_ConnectionManagerThread.cpp
+    test_TcpHost.cpp
+    test_ConnectDAWs.cpp
 )
 
 add_executable(${TEST_NAME} ${TESTS_SOURCES})
